--- a/src/style/menu.scss
+++ b/src/style/menu.scss
@@ -1,45 +1,46 @@
 .sub-menu-li {
   /deep/ .collapse-transition {
-    -webkit-transition: 0.3s height ease-in-out, 0.3s padding-top ease-in-out,
-      0.3s padding-bottom ease-in-out;
-    transition: 0.3s height ease-in-out, 0.3s padding-top ease-in-out,
-      0.3s padding-bottom ease-in-out;
+    -webkit-transition: 0.2s height ease-in-out, 0.2s padding-top ease-in-out,
+      0.2s padding-bottom ease-in-out;
+    transition: 0.2s height ease-in-out, 0.2s padding-top ease-in-out,
+      0.2s padding-bottom ease-in-out;
   }
 }
-
+.menu-container {
+  border-right: 1px solid #e8e8e8;
+}
 
 .menu-item {
   height: 40px;
   line-height: 40px;
-  margin-top: 4px;
-  margin-bottom: 4px;
   cursor: pointer;
 }
 .menu-item:hover {
   color: #1890ff;
 }
 .menu-item-title {
-    position: relative;
-    display: block;
-    margin: 0;
-    padding: 0 20px;
-    white-space: nowrap;
-    cursor: pointer;
-    transition: color .3s;
+  position: relative;
+  display: block;
+  margin: 0;
+  padding: 0 20px;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: color 0.3s;
 }
 .submenu-title {
-    height: 40px;
-    line-height: 40px;
-    padding-right: 34px;
-    margin-top: 4px;
-    margin-bottom: 4px;
+  height: 40px;
+  line-height: 40px;
+  padding-right: 34px;
 }
 .submenu-title-icon {
-    position: absolute;
-    top: 50%;
-    right: 16px;
-    transform:translate(-50%,-50%);
-    transition: transform .5s
+  position: absolute;
+  top: 50%;
+  right: 16px;
+  transform: translate(-50%, -50%);
+  transition: transform 0.5s;
+}
+.submenu-title:hover {
+  color: #1890ff;
 }
 .menu-item-active {
   position: relative;
